[package]
name = "Assistools"
version = "0.2.0"
edition = "2021"

[dependencies]
tauri = "1.2"
eframe = "0.23"
winapi = { version = "0.3", features = ["winuser", "wingdi", "winbase"] }  # Ajout de wingdi
winres = "0.1"  
image = "0.24"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs-next = "2.0"  # Pour obtenir les répertoires de configuration tels que AppData
chrono = "0.4"
enigo = "0.0.14"
encoding_rs = "0.8"

[[bin]]
name = "Assistools"
path = "src/main.rs"



[build-dependencies]
winres = "0.1"
